--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
        {% if request.endpoint=='routes.list_templates' %}aria-current="page"{% endif %}>
       <i class="far fa-comment-alt text-[10px]"></i><span>Templates</span>
     </a>
-    <a href="#"
+    <a href="{{ url_for('routes.customers') }}"
        class="flex items-center space-x-1 text-gray-500 hover:bg-gray-100 text-xs font-semibold rounded-md px-3 py-1.5 transition active:scale-95">
       <i class="fas fa-users text-[10px]"></i><span>Customers</span>
     </a>
